{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 52,
  "lineage": "057ac868-e752-a952-2738-9141116a3238",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af7e19d7f4a36103",
            "arn": "arn:aws:ec2:ap-south-1:822547339308:instance/i-02e05703b7220c2bc",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-02e05703b7220c2bc",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "k8s-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b924f23babe4b56d",
            "private_dns": "ip-10-0-1-40.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.40",
            "public_dns": "ec2-3-109-181-161.ap-south-1.compute.amazonaws.com",
            "public_ip": "3.109.181.161",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "Lab",
                  "ManagedBy": "Terraform",
                  "Project": "Kubernetes-DevOps"
                },
                "tags_all": {
                  "Environment": "Lab",
                  "ManagedBy": "Terraform",
                  "Project": "Kubernetes-DevOps"
                },
                "throughput": 125,
                "volume_id": "vol-0118c0a42c1f4d8c7",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0605f8a4db16f2d7c",
            "tags": {
              "Name": "k8s-control-plane",
              "Role": "control-plane"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "k8s-control-plane",
              "Project": "Kubernetes-DevOps",
              "Role": "control-plane"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f164d19927c961c3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s",
            "aws_subnet.k8s",
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker01",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af7e19d7f4a36103",
            "arn": "arn:aws:ec2:ap-south-1:822547339308:instance/i-08d45ac560add81ad",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-08d45ac560add81ad",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "k8s-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0b76be3c1944491eb",
            "private_dns": "ip-10-0-1-221.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.221",
            "public_dns": "ec2-65-0-18-207.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.0.18.207",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "Lab",
                  "ManagedBy": "Terraform",
                  "Project": "Kubernetes-DevOps"
                },
                "tags_all": {
                  "Environment": "Lab",
                  "ManagedBy": "Terraform",
                  "Project": "Kubernetes-DevOps"
                },
                "throughput": 125,
                "volume_id": "vol-0a350bc0758873d0d",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0605f8a4db16f2d7c",
            "tags": {
              "Name": "k8s-worker01",
              "Role": "worker"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "k8s-worker01",
              "Project": "Kubernetes-DevOps",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f164d19927c961c3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s",
            "aws_subnet.k8s",
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "worker02",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0af7e19d7f4a36103",
            "arn": "arn:aws:ec2:ap-south-1:822547339308:instance/i-01c58ab9475826b91",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 2
              }
            ],
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-01c58ab9475826b91",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "k8s-lab-key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0ee5f3dbd0f06a3e7",
            "private_dns": "ip-10-0-1-166.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.166",
            "public_dns": "ec2-15-206-168-16.ap-south-1.compute.amazonaws.com",
            "public_ip": "15.206.168.16",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "tags": {
                  "Environment": "Lab",
                  "ManagedBy": "Terraform",
                  "Project": "Kubernetes-DevOps"
                },
                "tags_all": {
                  "Environment": "Lab",
                  "ManagedBy": "Terraform",
                  "Project": "Kubernetes-DevOps"
                },
                "throughput": 125,
                "volume_id": "vol-0c204fe67581c97e3",
                "volume_size": 10,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0605f8a4db16f2d7c",
            "tags": {
              "Name": "k8s-worker02",
              "Role": "worker"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "k8s-worker02",
              "Project": "Kubernetes-DevOps",
              "Role": "worker"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0f164d19927c961c3"
            ]
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_security_group.k8s",
            "aws_subnet.k8s",
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822547339308:internet-gateway/igw-0fc12490e359f673c",
            "id": "igw-0fc12490e359f673c",
            "owner_id": "822547339308",
            "tags": {
              "Name": "k8s-lab-igw"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "k8s-lab-igw",
              "Project": "Kubernetes-DevOps"
            },
            "vpc_id": "vpc-0f74919c37152d1d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822547339308:route-table/rtb-024b4d196786ee52b",
            "id": "rtb-024b4d196786ee52b",
            "owner_id": "822547339308",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0fc12490e359f673c",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "k8s-lab-route-table"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "k8s-lab-route-table",
              "Project": "Kubernetes-DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f74919c37152d1d7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.k8s",
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08756b08ca5d679c6",
            "route_table_id": "rtb-024b4d196786ee52b",
            "subnet_id": "subnet-0605f8a4db16f2d7c"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.k8s",
            "aws_route_table.k8s",
            "aws_subnet.k8s",
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822547339308:security-group/sg-0f164d19927c961c3",
            "description": "Security group for Kubernetes control plane and workers",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f164d19927c961c3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubernetes API server",
                "from_port": 6443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 6443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Kubernetes NodePort",
                "from_port": 30000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 32767
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from anywhere",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow ICMP inside VPC",
                "from_port": -1,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": -1
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow Kubernetes node UDP communication",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "Allow Kubernetes nodes to communicate",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "name": "k8s-lab-sg",
            "name_prefix": "",
            "owner_id": "822547339308",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "k8s-lab-sg"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "k8s-lab-sg",
              "Project": "Kubernetes-DevOps"
            },
            "timeouts": null,
            "vpc_id": "vpc-0f74919c37152d1d7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822547339308:subnet/subnet-0605f8a4db16f2d7c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0605f8a4db16f2d7c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "822547339308",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "k8s-lab-subnet"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "k8s-lab-subnet",
              "Project": "Kubernetes-DevOps"
            },
            "vpc_id": "vpc-0f74919c37152d1d7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.k8s"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "k8s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:822547339308:vpc/vpc-0f74919c37152d1d7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-002793775b4ca7db1",
            "default_route_table_id": "rtb-0ca2d5cd220490849",
            "default_security_group_id": "sg-06742736847e46e6e",
            "dhcp_options_id": "dopt-08e151f6c89a788a3",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0f74919c37152d1d7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ca2d5cd220490849",
            "owner_id": "822547339308",
            "tags": {
              "Name": "k8s-lab-vpc"
            },
            "tags_all": {
              "Environment": "Lab",
              "ManagedBy": "Terraform",
              "Name": "k8s-lab-vpc",
              "Project": "Kubernetes-DevOps"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}